--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,7 @@ spring.mail.password=kshfdxxtqjcnhpys
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.security.user.name=Ashish
+spring.security.user.password=Ashish
+
 
